fix IT
Signed-off-by: xinyual <xinyual@amazon.com>